--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,34 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+
+
+
+    <item
+        android:id="@+id/ac_toolbar_copy"
+        android:orderInCategory="60"
+        android:title="复制"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/ac_toolbar_cut"
+        android:orderInCategory="70"
+        android:title="剪切"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/ac_toolbar_del"
+        android:orderInCategory="80"
+        android:title="删除"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/ac_toolbar_edit"
+        android:orderInCategory="90"
+        android:title="编辑"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/ac_toolbar_email"
+        android:orderInCategory="100"
+        android:title="邮箱"
+        app:showAsAction="ifRoom" />
 </menu>
