--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,8 @@
                 <item name="android:windowTranslucentNavigation">true</item>-->
         <!--选中状态icon的颜色和字体颜色-->
         <!--<item name="android:fitsSystemWindows">true</item>-->
-        <item name="colorPrimary">@android:color/holo_blue_dark</item>
-        <item name="colorPrimaryDark">@android:color/holo_blue_dark</item>
+        <item name="colorPrimary">@android:color/holo_red_light</item>
+        <item name="colorPrimaryDark">@android:color/holo_red_light</item>
         <item name="colorAccent">@android:color/holo_green_light</item>
         <!--正常状态下字体颜色和icon颜色-->
         <item name="android:textColorPrimary">@android:color/white</item>
@@ -18,15 +18,10 @@
 
     <style name="MyActionBar" parent="ThemeOverlay.AppCompat.ActionBar">
         <item name="android:textColor">@android:color/black</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="MyOverflowButton" parent="@android:style/Widget.Holo.ActionButton.Overflow">
-        <item name="android:src">@android:drawable/ic_menu_view</item>
-    </style>
 
-    <style name="MyToolbarTextStyle" parent="@android:style/TextAppearance.DeviceDefault">
-        <item name="android:textSize">20sp</item>
-    </style>
 
     <style name="AppTheme.TransparentActivity" parent="AppBaseTheme">
         <item name="android:windowBackground">@android:color/transparent</item>
